feat: enhance story graph editor with cluster management and arc linking